# format-keys.py

./: README.md  setup.cfg
tests/format-keys/examples/: test.py
